fix bottom footer overflow issue mobile, fix mobile nav bottom overflow issue, better mobile smooth scroll

--- a/styles/TopNav.scss
+++ b/styles/TopNav.scss
@@ -71,8 +71,8 @@ MOBILE NAV
   position: fixed;
   top: 0;
   right: 0;
-  height: 100vh;
-  width: 80vw;
+  height: 100%;
+  width: 80%;
   background: $primary;
   transform: translateX(110%);
   transition: transform 0.3s ease-out;
@@ -91,11 +91,11 @@ MOBILE NAV
     border-bottom: 1px solid darken($primary, 8%);
 
     a {
-      padding: 30px 16px 30px 40px;
+      padding: 20px 16px 20px 40px;
       background: darken($primary, 2%);
       margin: 0;
       color: #fff;
-      font-size: 24px;
+      font-size: 20px;
       font-weight: 100;
       border-radius: 0;
       border: none;
